# marge

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.ha-slim  LICENSE  README.md  docker-compose.pi-ha.yml  docker-compose.pi-marge.yml  docker-compose.yml  runclaude.sh  scenario.json
dashboard/: Dockerfile  index.html  nginx.conf
docs/: agent-memory.md  api-surface.md  architecture.md  demo-plan-v2-dependencies.md  demo-plan.md  demo-script.md  dependency-graph.mermaid  ha-assumptions-deep-dive.md  marge-conformance-tests.md  marge-continuation-prompt.md  marge-origin-story.md  marge-sss.md  marge-theory-of-ops.md  memory-leak-analysis.md  milestones.md  my-work-day-as-a-coding-agent.md  phase-tracker.md  pi-preflight.md  plan-pi-setup-sd.md  ralph-context.md  service-replacement-methodology.md  video-recording-guide.md  virtual-devices-plan.md  we-still-need-ralph-at-least-with-claude.md
examples/plugins/joke-sensor/: Cargo.toml
examples/plugins/joke-sensor/src/: lib.rs
ha-config/: automations.yaml  configuration-virtual.yaml  configuration.yaml  scenes.yaml
marge-core/: Cargo.toml  Dockerfile
marge-core/src/: api.rs  auth.rs  automation.rs  discovery.rs  lua_plugins.rs  main.rs  mqtt.rs  plugin_orchestrator.rs  plugins.rs  recorder.rs  scene.rs  services.rs  state.rs  template.rs  websocket.rs
marge-core/src/integrations/: cast.rs  esphome.rs  hue.rs  matter.rs  mod.rs  shelly.rs  sonos.rs  tasmota.rs  weather.rs  zigbee2mqtt.rs  zwave.rs
marge-ui/: index.html  package-lock.json  package.json  vite.config.ts
scenario-driver/: Dockerfile  driver.py  requirements.txt
scripts/: ab-diff.py  check-gate.sh  conformance-monitor.py  cts-compare.py  cts-dual-run.sh  ha-onboard.sh  ha-refresh-token.sh  pi-deploy.sh  run-demo.sh
tests/: conftest.py  test_hue.py  (+5 more)
(+443 files in other folders)
